# template

./: .deepsource.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  LICENSE.md  README.md  _zensical.toml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.js  search.json
.github/: dependabot.yml
.github/scripts/: gen_zensical_toml.py
.github/workflows/: docs.yaml  release.yaml  tests.yaml
docs/: docs.md  index.md  misc.md  tests.md  why.md
docs/ci/: tests.md  workflows.md
docs/code/: source.md
docs/example_docs/about/: changelog.md
docs/example_docs/ci/: tests.md  workflows.md
docs/example_docs/code/: hints.md  source.md  tests.md
docs/example_docs/intro/: why.md
docs/example_docs/mkdocs/: build.md  docs.md
docs/example_docs/other/: linting.md
docs/example_docs/setup/: basics.md  name.md  prep.md
docs/example_docs/wrapup/: commits.md
docs/example_docs/zensical/: build.md  docs.md
docs/installation/: install.md  pyproject.md
docs/intro/: why.md
docs/setup/: basics.md  name.md  prep.md
docs/wrapup/: commits.md
example_docs/about/: changelog.html  conduct.html  license.html
example_docs/code/: hints.html  source.html  tests.html
example_docs/github/: commits.html  workflows.html
example_docs/installation/: install.html  pyproject.html
example_docs/intro/: resources.html  why.html
example_docs/mkdocs/: build.html  docs.html
example_docs/other/: apps.html  linting.html
example_docs/setup/: basics.html  name.html  prep.html
example_docs/zensical/: build.html  docs.html
reference/: SUMMARY.html
reference/template/examples/: sample.html
search/: search_index.js  search_index.json
src/template/: __init__.py  sample.py
src/template/examples/: __init__.py
tests/: requirements.txt
tests/examples/: test_sample.py
tests/sample/: test_sample.py
